Fix spacing of menu toggle.
Close basemap panel after selecting basemap.

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ span.menu-label {
     font-weight: bold;
 }
 
-.calcite-maps .dropdown-toggle span {
-    top: 5px;
+ul.nav a.dropdown-toggle span {
+    top: 4px;
 }
 
 /*** Leaflet Controls ****/
